--- a/_posts/2022-10-11-업무일지.md
+++ b/_posts/2022-10-11-업무일지.md
@@ -2,5 +2,53 @@
 title: "22.10.11 ~ 22.10.14 업무일지"
 date: 2022-10-13
 ---
+#### Static
+- 가격
+- 제공년도 (복잡... 각 상품내 데이터 목록에 해당하는 년도? OR 배포년도)
 
-한글 테스트 
+#### Params
+- 검색어
+- 검색결과 목록
+-- 카테고리
+-- 상품명
+-- 상품 설명
+-- 키워드 (최대 5개)
+-- 데이터 유형
+-- 제공기관
+-- 유/무료
+-- 조회수
+-- 다운로드수
+-- 관심수
+-- 최종수정날짜
+- 총건수
+- 카테고리 목록 (명, 코드, 썸네일명칭)
+- 제공기관 목록 (명, 코드)
+- 데이터 종류 목록 (명, 코드)
+- 
+
+#### Things to Consider (not on comp web)
+- 목록형/갤러리형
+- 목록 썸네일 (명칭 변경)
+
+#### TBD
+- 페이지 크기
+- 페이지 갯수
+- 페이지 현재 번호
+- 정렬
+
+
+<details id=1>
+  <summary><h2>Wednesday 22.10.12</h2></summary>
+  TODO list  
+  - [X] doublecheck file path ../css_portal/
+</details>
+
+
+<details id=2>
+  <summary><h2>Thursday 22.10.13</h2></summary>
+  TODO list  
+  - [X] 토스 클라이언트 키 (테스트키 전달받음)
+  - [X] 토스 시크릿키 키 (테스트키 전달받음)
+  - [X] DB 연결 및 cmmn_group, cmmn_cd 확인
+  - [ ] 데이터 조회 ... (협업체 전달 하지 않았음 ㅠㅜ)
+</details>
